<resources>
    <string name="app_name">OctoAndroid</string>
    <string name="account_type">com.nairbspace.actoandroid</string>
    <string name="ip_address">IP Address</string>
    <string name="api_key">API Key</string>
    <string name="qr_code">QR Code</string>
    <string name="add_printer">Add Printer</string>
    <string name="add">Add</string>
    <string name="port">Port</string>
    <string name="secure_connection_ssl">Secure Connection (SSL)</string>
    <string name="printer_name">Printer Name</string>
    <string name="octoprint_background_image">OctoPrint Background Image</string>
    <string name="close">Close</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
