<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.AddPrinterActivity">

    <ProgressBar
        android:id="@+id/add_printer_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    <ScrollView
        android:id="@+id/add_printer_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">
        <LinearLayout
            android:layout_width="@dimen/add_printer_scroll_view_width"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:focusableInTouchMode="true"
            android:focusable="true">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/printer_name">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/printer_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="bottom"
                android:baselineAligned="false">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:hint="@string/ip_address">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ip_address_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textUri"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/port">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/port_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="bottom">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/api_key">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/api_key_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeActionId="@+id/add_printer"
                        android:imeActionLabel="@string/add"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textVisiblePassword"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
                <ImageButton
                    android:id="@+id/qr_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/qr_icon"
                    android:contentDescription="@string/qr_code"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/ssl_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secure_connection_ssl"/>

            <Button
                android:id="@+id/add_printer_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:theme="@style/AddPrinterButtonStyle"
                android:text="@string/add_printer"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
